samples/_failures_safe/1761689759_cec1c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f84714d6.c: In function ‘main’:
./samples/SAFE/__tmp_f84714d6.c:140:5: error: expected expression at end of input
  140 |     switch (
      |     ^~~~~~
./samples/SAFE/__tmp_f84714d6.c:140:5: error: expected declaration or statement at end of input
